--- a/src/app/theme/pages/default/extras/extras-datatable/extras-datatable.component.html
+++ b/src/app/theme/pages/default/extras/extras-datatable/extras-datatable.component.html
@@ -169,7 +169,7 @@
           </div>
           <div class="m-list-settings__item">
             <span class="m-list-settings__item-label">
-              Telefono
+              Teléfono
             </span>
             <span class="m-list-settings__item-control">
               {{ resourceData.telefono }}
@@ -201,7 +201,7 @@
           </div>
           <div class="m-list-settings__item">
             <span class="m-list-settings__item-label">
-              Tramite
+              Trámite
             </span>
             <span class="m-list-settings__item-control">
               {{ resourceData.tramite }}
