--- a/src/app/auth/registro-usuario/registro-usuario.component.html
+++ b/src/app/auth/registro-usuario/registro-usuario.component.html
@@ -40,7 +40,7 @@
                 Cédula:
             </label>
             <div class="col-lg-3">
-                <input type="text" class="form-control m-input" placeholder="ID"
+                <input type="text" class="form-control m-input" placeholder="Cédula"
                        ngModel #numero_identidad="ngModel" name="numero_identidad" required>
                 <section *ngIf="numero_identidad.invalid && numero_identidad.dirty" class="bs">
                     <p class="m--font-danger" *ngIf="numero_identidad.hasError('required')">La Cédula es requerida</p>
@@ -141,7 +141,7 @@
         </div>
         <div class="form-group m-form__group row">
             <label class="col-lg-2 col-form-label" *ngIf="tipo_registro == 2">
-                Provincia/Departamento
+                Provincia
             </label>
             <div class="col-lg-3" *ngIf="tipo_registro == 2">
                 <div class="m-loader m-loader--primary m-loader--right" *ngIf="!provincias">
