--- a/src/app/theme/pages/default/perfil/password/password.component.html
+++ b/src/app/theme/pages/default/perfil/password/password.component.html
@@ -39,6 +39,9 @@
             <section *ngIf="(password_repeat.value != password.value) && (password_repeat.dirty)" class="bs">
                 <p class="m--font-danger">Las contraseñas deben ser iguales</p>
             </section>
+            <section *ngIf="message && message != 'Contraseña cambiada con éxito'" class="bs">
+                <p class="m--font-danger">{{message}}</p>
+            </section>
         </div>
     </div>
     <div class="m-portlet__foot m-portlet__no-border m-portlet__foot--fit">
@@ -46,6 +49,9 @@
             <div class="row">
                 <div class="col-lg-2"></div>
                 <div class="col-lg-10">
+                    <section *ngIf="message && message == 'Contraseña cambiada con éxito'" class="bs">
+                        <h4 class="m--font-success">{{message}}</h4>
+                    </section><br/>
                     <button type="submit" class="btn btn-success" [disabled]="passwordForm.invalid">
                         Cambiar Contraseña
                     </button>
