--- a/src/app/theme/pages/default/perfil/perfil-lista/perfil-lista.component.html
+++ b/src/app/theme/pages/default/perfil/perfil-lista/perfil-lista.component.html
@@ -199,7 +199,7 @@
       <div class="m-portlet m-portlet--mobile">
         <div class="m-portlet__body">
           <app-password
-          (message)="verMensaje($event)"></app-password>
+          (cambiarPass)="cambiarPass($event)"></app-password>
         </div>
       </div>
     </div>
