Texto de la calculadora

--- a/src/app/theme/pages/default/calculadora/calculadora.component.html
+++ b/src/app/theme/pages/default/calculadora/calculadora.component.html
@@ -72,10 +72,10 @@
                     </div>
                     <div class="form-group m-form__group row">
                         <label class="col-md-2 col-form-label">
-                            Valor Declarado
+                            Valor Declarado(USD)
                         </label>
                         <div class="col-md-2">
-                            <input type="number" min="0" class="form-control m-input" placeholder="Valor Declarado"
+                            <input type="number" min="0" class="form-control m-input" placeholder="Valor Declarado(USD)"
                                 ngModel #precio="ngModel" name="precio">
                         </div>
                         <label class="col-md-2 col-form-label">
@@ -131,7 +131,7 @@
                 <div class="modal-body">
                     <div class="row">
                         <div class="col-12 m--align-center">
-                            <h4>Total Gastos</h4>
+                            <h4>Total Gastos(USD)</h4>
                         </div>
                         <div class="col-12 m--align-center">
                             <h2>{{resultado.precio_final}}</h2>
