arreglos de estilo

--- a/src/app/theme/pages/default/contacto/contacto.component.html
+++ b/src/app/theme/pages/default/contacto/contacto.component.html
@@ -2,7 +2,7 @@
     <div class="d-flex align-items-center">
         <div class="mr-auto">
             <h3 class="page-title">
-                Contáctanos
+                CONTÁCTANOS
             </h3>
         </div>
     </div>
@@ -13,8 +13,11 @@
     <div class="row">
         <div class="col-md-6">
             <p>
-                Si no encuentras la respuesta a lo que buscas, no dudes de contactarnos via email o telefónica y uno
-                de nuestros representantes se comunicará contigo para ayudarte con todo lo referente a tus compras en USA.
+                Si no encuentras la respuesta a lo que buscas, no dudes de contactarnos.<br/><br/>
+
+                1- <a href="https://api.whatsapp.com/send?phone=17865039878&text=&source=&data=" class="m-nav__link" target="_blanck" style="color:#1e1111 !important; text-decoration:none !important;">WHATSAPP</a> <br/><br/>
+                
+                2- MENSAJE
             </p>
             <input class="form-control m-input" [(ngModel)]="correo.subject" placeholder="Asunto" style="margin: 5px">
             <input class="form-control m-input" [(ngModel)]="correo.nombre" disabled style="margin: 5px">
