--- a/src/app/theme/pages/default/tracks/tracks-list/tracks-list.component.html
+++ b/src/app/theme/pages/default/tracks/tracks-list/tracks-list.component.html
@@ -2,7 +2,7 @@
     <div class="d-flex align-items-center">
         <div class="mr-auto">
             <h3 class="page-title">
-                Informar Compra
+                 INFORMAR COMPRA
             </h3>
         </div>
     </div>
