--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,16 +14,16 @@ body {
   font-size: 11px !important;
 }
 
-.page-title {
+/* .page-title {
   padding: 0px;
   font-size: 30px;
   letter-spacing: -1px;
   display: block;
-  color: #b5b6b5;
+  color: #1e1111;
   margin: 0px 0px 15px 0px;
   font-weight: 300;
   font-family: "Open Sans", sans-serif;
-}
+} */
 
 .profile-info h1 {
   color: #383839;
