arreglos de estilo

--- a/src/app/theme/layouts/header-nav/header-nav.component.html
+++ b/src/app/theme/layouts/header-nav/header-nav.component.html
@@ -42,7 +42,7 @@
                                 <span class="m-menu__link-title">
                                     <span class="m-menu__link-wrap">
                                         <span class="m-menu__link-text">
-                                            Mi Casillero
+                                             Casillero
                                         </span>
                                     </span>
                                 </span>
@@ -54,7 +54,7 @@
                                 <span class="m-menu__link-title">
                                     <span class="m-menu__link-wrap">
                                         <span class="m-menu__link-text">
-                                            Calculadora
+                                            Cotizador
                                         </span>
                                     </span>
                                 </span>
@@ -78,7 +78,7 @@
                                 <span class="m-menu__link-title">
                                     <span class="m-menu__link-wrap">
                                         <span class="m-menu__link-text">
-                                            Mis Facturas
+                                            Pagos
                                         </span>
                                     </span>
                                 </span>
@@ -90,7 +90,7 @@
                                 <span class="m-menu__link-title">
                                     <span class="m-menu__link-wrap">
                                         <span class="m-menu__link-text">
-                                            Preguntas Frecuentes
+                                            Ayuda
                                         </span>
                                     </span>
                                 </span>
