--- a/src/app/theme/pages/default/tracks/tracks-datatable/tracks-datatable.component.html
+++ b/src/app/theme/pages/default/tracks/tracks-datatable/tracks-datatable.component.html
@@ -2,7 +2,7 @@
     <thead>
     <tr>
         <th>
-            Código
+            # Rastreo
         </th>
         <th>
             Empresa Transporte
