--- a/src/app/theme/pages/default/calculadora/calculadora.component.html
+++ b/src/app/theme/pages/default/calculadora/calculadora.component.html
@@ -2,7 +2,7 @@
     <div class="d-flex align-items-center">
         <div class="mr-auto">
             <h3 class="page-title">
-                CALCULADORA
+                COTIZADOR
             </h3>
         </div>
     </div>
