--- a/src/app/theme/pages/default/facturaciones/facturaciones-lista/facturaciones-lista.component.html
+++ b/src/app/theme/pages/default/facturaciones/facturaciones-lista/facturaciones-lista.component.html
@@ -2,7 +2,7 @@
     <div class="d-flex align-items-center">
         <div class="mr-auto">
             <h3 class="page-title">
-                MIS FACTURAS
+                PAGOS
             </h3>
         </div>
     </div>
