--- a/src/app/theme/pages/default/preguntas/preguntas.component.html
+++ b/src/app/theme/pages/default/preguntas/preguntas.component.html
@@ -2,7 +2,7 @@
     <div class="d-flex align-items-center">
         <div class="mr-auto">
             <h3 class="page-title">
-                PREGUNTAS FRECUENTES
+                AYUDA
             </h3>
         </div>
     </div>
