--- a/src/assets/demo/default/base/style.bundle.css
+++ b/src/assets/demo/default/base/style.bundle.css
@@ -27146,7 +27146,7 @@ body.m-content--skin-light2 {
           line-height: 0;
           vertical-align: middle;
           padding: 0;
-          color: #ad5beb; }
+          color: #1e1111; }
           .m-topbar .m-topbar__nav.m-nav > .m-nav__item > .m-nav__link .m-nav__link-icon > i {
             font-size: 1.5rem; }
             .m-topbar .m-topbar__nav.m-nav > .m-nav__item > .m-nav__link .m-nav__link-icon > i:before {
@@ -27155,7 +27155,7 @@ body.m-content--skin-light2 {
               background-clip: text;
               text-fill-color: transparent;
               -webkit-background-clip: text;
-               -webkit-text-fill-color: transparent;  
+              /* -webkit-text-fill-color: transparent;  */
               }
               @media screen\0 {
                 .m-topbar .m-topbar__nav.m-nav > .m-nav__item > .m-nav__link .m-nav__link-icon > i:before {
