estilo de mensajes

--- a/src/assets/demo/default/base/style.bundle.css
+++ b/src/assets/demo/default/base/style.bundle.css
@@ -22699,7 +22699,7 @@ body.m-portlet--fullscreen {
     font-size: 1.1rem; }
 
 .toast-success {
-  background-color: #b5b6b5;
+  background-color: #1e1111;
   color: #fdfeff;
   -webkit-box-shadow: 0px 0px 15px 1px rgba(113, 106, 202, 0.2);
   -moz-box-shadow: 0px 0px 15px 1px rgba(113, 106, 202, 0.2);
