--- a/src/app/theme/pages/default/perfil/perfil-lista/perfil-lista.component.html
+++ b/src/app/theme/pages/default/perfil/perfil-lista/perfil-lista.component.html
@@ -139,13 +139,13 @@
                     {{ usuario.nombre }} {{ usuario.apellido }} / Box593 </span
                   ><br />
                   <span style="font-size: 14px">
-                    {{ usuario.pais.direccion }} #{{ usuario.codigo }} </span
+                    {{ usuario.interfaz.direccion }} #{{ usuario.codigo }} </span
                   ><br />
                   <span style="font-size: 14px">
-                    {{ usuario.pais.region }} </span
+                    {{ usuario.interfaz.region }} </span
                   ><br />
                   <span style="font-size: 14px">
-                    Telf: {{ usuario.pais.telefono }} </span
+                    Telf: {{ usuario.interfaz.telefono }} </span
                   ><br />
                 </div>
               </div>
