--- a/src/app/theme/pages/default/mi-casillero/mi-casillero-lista/mi-casillero-lista.component.html
+++ b/src/app/theme/pages/default/mi-casillero/mi-casillero-lista/mi-casillero-lista.component.html
@@ -37,13 +37,13 @@
                          {{appService.user.nombre}} {{appService.user.apellido}} / Box593
                     </span><br>
                     <span style="font-size: 14px">
-                         {{appService.user.pais.direccion}} #{{appService.user.codigo}}
+                         {{appService.user.interfaz.direccion}} #{{appService.user.codigo}}
                     </span><br>
                     <span style="font-size: 14px">
-                         {{appService.user.pais.region}}
+                         {{appService.user.interfaz.region}}
                     </span><br>
                     <span style="font-size: 14px">
-                         Telf: {{appService.user.pais.telefono}}
+                         Telf: {{appService.user.interfaz.telefono}}
                     </span><br>
                 </div>
 
