--- a/src/app/theme/pages/default/mi-casillero/en-transito-datatable/en-transito-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/en-transito-datatable/en-transito-datatable.component.html
@@ -12,13 +12,13 @@
     </tr>
     <tr *ngFor="let articulo of data">
         <td>
-            {{articulo.articulo[0].fecha_envio | date: "shortDate"}}
+            {{articulo.fecha | date: "shortDate"}}
         </td>
         <td>
            {{articulo.warehouse}}
         </td>
         <td>
-            <i class="fa fa-eye m--font-info" title="Ver" style="cursor: pointer;" (click)="onVer(articulo, articuloDetallesModal)"></i>
+            <i class="fa fa-eye m--font-info" title="Ver" style="cursor: pointer;" (click)="onVer(articulo.id, articuloDetallesModal)"></i>
         </td>
     </tr>
     </tbody>
@@ -69,7 +69,7 @@
             </tr>
             </thead>
             <tbody>
-            <tr *ngFor="let articulo of envio.articulo">
+            <tr *ngFor="let articulo of envio">
                 <td>
                     {{articulo.fecha_bodega | date: "shortDate"}}
                 </td>
@@ -80,8 +80,8 @@
                     {{articulo.tracking}}
                 </td>
                 <td>
-                    <span *ngIf="!articulo.media || !articulo.media[0]">{{articulo.descripcion}}</span>
-                    <span class="m-link m-link--info" style="cursor: pointer;" *ngIf="articulo.media && articulo.media[0]" (click)="onVerImagenes(articulo)">{{articulo.descripcion}}</span>
+                    <span *ngIf="articulo.media == 0">{{articulo.descripcion}}</span>
+                    <span class="m-link m-link--info" style="cursor: pointer;" *ngIf="articulo.media > 0" (click)="onVerImagenes(articulo.id)">{{articulo.descripcion}}</span>
                 </td>
                 <td>
                     {{articulo.tienda}}
