--- a/src/app/theme/pages/default/mi-casillero/entregados-datatable/entregados-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/entregados-datatable/entregados-datatable.component.html
@@ -18,17 +18,17 @@
     </tr>
     <tr *ngFor="let articulo of data">
         <td>
-            {{articulo.facturacion.fecha_ingreso | date: "shortDate"}}
+            {{articulo.fechaIngreso | date: "shortDate"}}
         </td>
         <td>
-            {{articulo.envio.warehouse}}
+            {{articulo.warehouse}}
         </td>
         <td>
             {{articulo.tracking}}
         </td>
         <td>
-            <span *ngIf="!articulo.media || !articulo.media[0]">{{articulo.descripcion}}</span>
-            <span class="m-link m-link--info" style="cursor: pointer;" *ngIf="articulo.media && articulo.media[0]" (click)="onVerImagenes(articulo)">{{articulo.descripcion}}</span>
+            <span *ngIf="articulo.media == 0">{{articulo.descripcion}}</span>
+            <span class="m-link m-link--info" style="cursor: pointer;" *ngIf="articulo.media > 0" (click)="onVerImagenes(articulo.id)">{{articulo.descripcion}}</span>
         </td>
         <td>
             {{articulo.tienda}}
@@ -90,16 +90,16 @@
             <tbody>
             <tr>
                 <td>
-                    {{item.fecha_envio | date: "shortDate"}}
+                    {{item.fechaEnvio | date: "shortDate"}}
                 </td>
                 <td>
-                    {{item.facturacion.fecha_guia | date: "shortDate"}}
+                    {{item.fechaGuia | date: "shortDate"}}
                 </td>
                 <td>
-                    {{item.facturacion.guia}}
+                    {{item.guia}}
                 </td>
                 <td>
-                    {{item.facturacion.courier.nombre}}
+                    {{item.nombre}}
                 </td>
             </tr>
             </tbody>
