--- a/src/app/theme/pages/default/mi-casillero/facturacion-datatable/facturacion-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/facturacion-datatable/facturacion-datatable.component.html
@@ -14,19 +14,19 @@
     </tr>
     <tr *ngFor="let articulo of data">
         <td>
-            {{articulo.articulo[0].fecha_envio | date: "shortDate"}}
+            {{articulo.fechaIngreso | date: "shortDate"}}
         </td>
         <td>
-            {{articulo.fecha_notificacion | date: "shortDate"}}
+            {{articulo.fechaNotificacion | date: "shortDate"}}
         </td>
         <td>
             {{articulo.costo}}
         </td>
         <td>
-            <span class="m-link" style="cursor: pointer" (click)="openModal(formasPagoModal)">Ver Formas</span>
+            <span class="m-link" style="cursor: pointer" (click)="onFormasPago(articulo.id, formasPagoModal)">Ver Formas</span>
         </td>
         <td>
-            <i class="fa fa-eye m--font-info" title="Ver" style="cursor: pointer;" (click)="onVer(articulo, articuloDetallesModal)"></i>
+            <i class="fa fa-eye m--font-info" title="Ver" style="cursor: pointer;" (click)="onVer(articulo.id, articuloDetallesModal)"></i>
         </td>
     </tr>
     </tbody>
@@ -64,7 +64,7 @@
         </button>
     </div>
     <div class="modal-body">
-       <div [innerHtml]="data[0].articulo[0].usuario.pais.pago"></div>
+       <div [innerHtml]="pago"></div>
     </div>
 </ng-template>
 <!--end::Modal-->  <!--begin::Modal-->
@@ -90,16 +90,16 @@
             </tr>
             </thead>
             <tbody>
-            <tr *ngFor="let articulo of envio.articulo">
+            <tr *ngFor="let articulo of envio">
                 <td>
-                    {{articulo.envio.warehouse}}
+                    {{articulo.warehouse}}
                 </td>
                 <td>
                     {{articulo.tracking}}
                 </td>
                 <td>
-                    <span *ngIf="!articulo.media || !articulo.media[0]">{{articulo.descripcion}}</span>
-                    <span class="m-link m-link--info" style="cursor: pointer;" *ngIf="articulo.media && articulo.media[0]" (click)="onVerImagenes(articulo)">{{articulo.descripcion}}</span>
+                    <span *ngIf="articulo.media == 0">{{articulo.descripcion}}</span>
+                    <span class="m-link m-link--info" style="cursor: pointer;" *ngIf="articulo.media > 0" (click)="onVerImagenes(articulo.id)">{{articulo.descripcion}}</span>
                 </td>
                 <td>
                     {{articulo.tienda}}
