--- a/src/app/theme/pages/default/mi-casillero/mi-casillero-lista/mi-casillero-lista.component.html
+++ b/src/app/theme/pages/default/mi-casillero/mi-casillero-lista/mi-casillero-lista.component.html
@@ -208,8 +208,8 @@
         </button>
     </div>
     <div class="modal-body row">
-        <div *ngFor="let image of articulo.media" class="col-md-4 col-lg-4 col-sm-12 col-xs-12">
-            <img [src]="image.web_url" style="width: 150px; height: 150px; object-fit: contain">
+        <div *ngFor="let image of articulo[0]" class="col-md-4 col-lg-4 col-sm-12 col-xs-12">
+            <img [src]="articulo[1]+image.url" style="width: 150px; height: 150px; object-fit: contain">
         </div>
     </div>
 </ng-template>
