--- a/src/app/theme/pages/default/mi-casillero/ruta-nacional-datatable/ruta-nacional-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/ruta-nacional-datatable/ruta-nacional-datatable.component.html
@@ -16,25 +16,25 @@
     </tr>
     <tr *ngFor="let articulo of data">
        <td>
-           {{articulo.articulo[0].fecha_envio | date: "shortDate"}}
+           {{articulo.fechaIngreso | date: "shortDate"}}
         </td>
         <td>
-           {{articulo.fecha_notificacion | date: "shortDate"}}
+           {{articulo.fechaNotificacion | date: "shortDate"}}
         </td>
         <td>
-            {{articulo.fecha_guia | date: "shortDate"}}
+            {{articulo.fechaGuia | date: "shortDate"}}
         </td>
         <td>
             {{articulo.guia}}
         </td>
         <td>
-            {{articulo.courier.nombre}}
+            {{articulo.courier}}
         </td>
         <td>
             {{articulo.costo}}
         </td>
         <td>
-            <i class="fa fa-eye m--font-info" title="Ver" style="cursor: pointer;" (click)="onVer(articulo, articuloDetallesModal)"></i>
+            <i class="fa fa-eye m--font-info" title="Ver" style="cursor: pointer;" (click)="onVer(articulo.id, articuloDetallesModal)"></i>
         </td>
     </tr>
     </tbody>
@@ -84,16 +84,16 @@
             </tr>
             </thead>
             <tbody>
-            <tr *ngFor="let articulo of envio.articulo">
+            <tr *ngFor="let articulo of envio">
                 <td>
-                    {{articulo.envio.warehouse}}
+                    {{articulo.warehouse}}
                 </td>
                 <td>
                     {{articulo.tracking}}
                 </td>
                 <td>
-                    <span *ngIf="!articulo.media || !articulo.media[0]">{{articulo.descripcion}}</span>
-                    <span class="m-link m-link--info" style="cursor: pointer;" *ngIf="articulo.media && articulo.media[0]" (click)="onVerImagenes(articulo)">{{articulo.descripcion}}</span>
+                    <span *ngIf="articulo.media == 0">{{articulo.descripcion}}</span>
+                    <span class="m-link m-link--info" style="cursor: pointer;" *ngIf="articulo.media > 0" (click)="onVerImagenes(articulo.id)">{{articulo.descripcion}}</span>
                 </td>
                 <td>
                     {{articulo.tienda}}
