cambio de tienda por remitente

--- a/src/app/theme/pages/default/facturaciones/facturaciones-datatable/facturaciones-datatable.component.html
+++ b/src/app/theme/pages/default/facturaciones/facturaciones-datatable/facturaciones-datatable.component.html
@@ -73,7 +73,7 @@
                     Trackbox
                 </th>
                 <th>
-                    Track Tienda
+                    Track Remitente
                 </th>
                 <th>
                     Descripción
@@ -85,7 +85,7 @@
                     Costo
                 </th>
                 <th>
-                    Tienda
+                    Remitente
                 </th>
             </tr>
             </thead>
