--- a/src/app/theme/pages/default/mi-casillero/en-transito-datatable/en-transito-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/en-transito-datatable/en-transito-datatable.component.html
@@ -63,7 +63,7 @@
                 <th>Código</th>
                 <th>Tracking</th>
                 <th>Descripción</th>
-                <th>Tienda</th>
+                <th>Remitente</th>
                 <th>Peso</th>
                 <th>Valor</th>
             </tr>
