--- a/src/app/theme/pages/default/mi-casillero/ruta-nacional-datatable/ruta-nacional-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/ruta-nacional-datatable/ruta-nacional-datatable.component.html
@@ -78,7 +78,7 @@
                 <th>Articulo W/R</th>
                 <th>Tracking</th>
                 <th>Descripción</th>
-                <th>Tienda</th>
+                <th>Remitente</th>
                 <th>Peso</th>
                 <th>Valor</th>
             </tr>
