--- a/src/app/theme/pages/default/mi-casillero/en-bodega-datatable/en-bodega-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/en-bodega-datatable/en-bodega-datatable.component.html
@@ -8,7 +8,7 @@
         <th>Código</th>
         <th>Tracking</th>
         <th>Descripción</th>
-        <th>Tienda</th>
+        <th>Remitente</th>
         <th>Peso</th>
         <th>Dim</th>
         <th>Vol</th>
@@ -46,6 +46,7 @@
         <td>
             <span *ngIf="articulo.media == 0">{{articulo.descripcion}}</span>
             <span class="m-link m-link--info" style="cursor: pointer;" *ngIf="articulo.media > 0" (click)="onVerImagenes(articulo.id)">{{articulo.descripcion}}</span>
+            <span *ngIf="articulo.extranombre">({{articulo.extranombre}} {{articulo.extraapellidos}})</span>
         </td>
         <td>
             {{articulo.tienda}}
