--- a/src/app/theme/pages/default/mi-casillero/entregados-datatable/entregados-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/entregados-datatable/entregados-datatable.component.html
@@ -6,7 +6,7 @@
         <th>Articulo/WR</th>
         <th>Tracking</th>
         <th>Descripción</th>
-        <th>Tienda</th>
+        <th>Remitente</th>
         <th>Peso</th>
         <th>Valor</th>
         <th>Acciones</th>
