--- a/src/app/theme/pages/default/mi-casillero/facturacion-datatable/facturacion-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/facturacion-datatable/facturacion-datatable.component.html
@@ -84,7 +84,7 @@
                 <th>Articulo W/R</th>
                 <th>Tracking</th>
                 <th>Descripción</th>
-                <th>Tienda</th>
+                <th>Remitente</th>
                 <th>Peso</th>
                 <th>Valor</th>
             </tr>
