Unidades de medidas

--- a/src/app/theme/pages/default/facturaciones/facturaciones-datatable/facturaciones-datatable.component.html
+++ b/src/app/theme/pages/default/facturaciones/facturaciones-datatable/facturaciones-datatable.component.html
@@ -79,10 +79,10 @@
                     Descripción
                 </th>
                 <th>
-                    Peso
+                    Peso(Lb)
                 </th>
                 <th>
-                    Costo
+                    Costo(USD)
                 </th>
                 <th>
                     Remitente
