--- a/src/app/theme/pages/default/mi-casillero/en-bodega-datatable/en-bodega-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/en-bodega-datatable/en-bodega-datatable.component.html
@@ -9,10 +9,10 @@
         <th>Tracking</th>
         <th>Descripción</th>
         <th>Remitente</th>
-        <th>Peso</th>
-        <th>Dim</th>
-        <th>Vol</th>
-        <th>Valor</th>
+        <th>Peso(Lb)</th>
+        <th>Dim(In)</th>
+        <th>Vol(Vlb)</th>
+        <th>Valor(USD)</th>
         <th>Documento</th>
         <th>
         </th>
