--- a/src/app/theme/pages/default/mi-casillero/ruta-nacional-datatable/ruta-nacional-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/ruta-nacional-datatable/ruta-nacional-datatable.component.html
@@ -79,8 +79,8 @@
                 <th>Tracking</th>
                 <th>Descripción</th>
                 <th>Remitente</th>
-                <th>Peso</th>
-                <th>Valor</th>
+                <th>Peso(Lb)</th>
+                <th>Valor(USD)</th>
             </tr>
             </thead>
             <tbody>
