--- a/src/app/theme/pages/default/mi-casillero/entregados-datatable/entregados-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/entregados-datatable/entregados-datatable.component.html
@@ -7,8 +7,8 @@
         <th>Tracking</th>
         <th>Descripción</th>
         <th>Remitente</th>
-        <th>Peso</th>
-        <th>Valor</th>
+        <th>Peso(Lb)</th>
+        <th>Valor(USD)</th>
         <th>Acciones</th>
     </tr>
     </thead>
