--- a/src/app/theme/pages/default/mi-casillero/facturacion-datatable/facturacion-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/facturacion-datatable/facturacion-datatable.component.html
@@ -85,8 +85,8 @@
                 <th>Tracking</th>
                 <th>Descripción</th>
                 <th>Remitente</th>
-                <th>Peso</th>
-                <th>Valor</th>
+                <th>Peso(Lb)</th>
+                <th>Valor(USD)</th>
             </tr>
             </thead>
             <tbody>
