--- a/src/app/theme/pages/default/perfil/password/password.component.html
+++ b/src/app/theme/pages/default/perfil/password/password.component.html
@@ -50,7 +50,7 @@
                 <div class="col-lg-2"></div>
                 <div class="col-lg-10">
                     <section *ngIf="message && message == 'Contraseña cambiada con éxito'" class="bs">
-                        <h4 class="m--font-success">{{message}}</h4>
+                        <h4 class="m--font-success" style="color: #4cc22f !important;">{{message}}</h4>
                     </section><br/>
                     <button type="submit" class="btn btn-success" [disabled]="passwordForm.invalid">
                         Cambiar Contraseña
