--- a/src/app/theme/pages/default/perfil/perfil-lista/perfil-lista.component.html
+++ b/src/app/theme/pages/default/perfil/perfil-lista/perfil-lista.component.html
@@ -142,7 +142,7 @@
                     <strong>Casillero Internacional: </strong> </span
                   ><br />
                   <span style="font-size: 14px">
-                    {{ usuario.nombre }} {{ usuario.apellido }} / Box593 </span
+                    {{ usuario.nombre }} {{ usuario.apellido }} / {{ usuario.interfaz.name }} </span
                   ><br />
                   <span style="font-size: 14px">
                     {{ usuario.interfaz.direccion }} #{{ usuario.codigo }} </span
