--- a/src/app/theme/pages/default/mi-casillero/en-bodega-list-header/en-bodega-list-header.component.html
+++ b/src/app/theme/pages/default/mi-casillero/en-bodega-list-header/en-bodega-list-header.component.html
@@ -1,5 +1,10 @@
 <div class="row align-items-center">
     <div class="col-12 m--align-right">
+        <button [disabled]="!puedeFactura || totalEnBodega < 2" class="btn btn-success m-btn m-btn--icon m-btn--air m-btn--custom"
+                (click)="onFactura()" >
+            <i class="fa fa-folder-open"></i>
+            Factura
+        </button>
         <button [disabled]="totalEnBodega <= 0" class="btn btn-warning m-btn m-btn--icon m-btn--air m-btn--custom"
                 (click)="onEmbarcar()" >
             <i class="fa fa-plane"></i>
